--- a/AndroidBaseProjectModule/build.gradle
+++ b/AndroidBaseProjectModule/build.gradle
@@ -2,19 +2,20 @@ apply plugin: 'com.android.library'
 
 apply plugin: 'kotlin-android'
 
-apply plugin: 'kotlin-android-extensions'
+//apply plugin: 'kotlin-android-extensions'
 
 apply plugin: 'kotlin-kapt'
 
 
 android {
-    compileSdkVersion 31
+    compileSdkVersion 35
 
     defaultConfig {
         minSdkVersion 26
-        targetSdkVersion 31
+        targetSdkVersion 35
         versionCode 1
         versionName "1.0"
+        namespace "com.wenyang.androidbaseprojectmodule"
 
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
 
